<resources>
    <string name="app_name">Todo App</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="_1">1</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="date">Date</string>
    <string name="welcome">Welcome !</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign in</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_sign_ucp">Don\'t Have an Account? Sign Up</string>
    <string name="priority">Priority:</string>
    <string name="rijen">Developed by Rijen Maharjan {c7189979}</string>


    <string-array name="condition">
        <item>Work in Progress</item>
        <item>Complete</item>
        <item>Overdue</item>
    </string-array>


</resources>
