<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:gravity="center"
    android:layout_alignParentTop="true"
    android:layout_above="@id/input_group">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="93dp"

        app:srcCompat="@drawable/todo_logo"
        android:contentDescription="@string/todo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>


</LinearLayout>


<LinearLayout
    android:id="@+id/input_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginBottom="50dp"
    android:layout_alignParentBottom="true"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_middle"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_middle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_middle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

    <EditText
        android:id="@+id/editTextCnfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_middle"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:text="@string/already_have_an_account_sign_in"
        android:textAllCaps="true"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#FAD0E1"
        android:fontFamily="sans-serif"/>

</LinearLayout>
</RelativeLayout>